--- a/bundleconfig.json
+++ b/bundleconfig.json
@@ -3,7 +3,9 @@
             "bower_components/jquery/dist/jquery.js",
             "bower_components/slick.js/slick/slick.js",
             "bower_components/stats.js/build/stats.min.js",
-            "bower_components/dat.gui/build/dat.gui.js"
+            "bower_components/dat.gui/build/dat.gui.js",
+            "bower_components/smooth-scrollbar/dist/smooth-scrollbar.js",
+            "bower_components/smooth-scrollbar/dist/plugins/overscroll.js"
         ],
         "outputFileName": "docs/js/vendors.js",
         "minify": {
