--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,8 @@
   ],
   "dependencies": {
     "greensock": "https://github.com/greensock/GreenSock-JS.git#1.20.4",
-    "stats.js": "https://github.com/mrdoob/stats.js.git#r17",
-    "dat.gui": "https://github.com/dataarts/dat.gui.git#0.6.5",
-    "smooth-scrollbar": "https://github.com/idiotWu/smooth-scrollbar.git#8.2.0"
+    "smooth-scrollbar": "https://github.com/idiotWu/smooth-scrollbar.git#8.2.0",
+    "slick-carousel": "slick.js#^1.8.1",
+    "jquery": "^3.3.1"
   }
 }
